@@ -572,12 +572,12 @@ Log::init_fields()
                        SQUID_LOG_TCP_MISS, "TCP_MISS",
                        SQUID_LOG_TCP_EXPIRED_MISS, "TCP_EXPIRED_MISS",
                        SQUID_LOG_TCP_REFRESH_HIT, "TCP_REFRESH_HIT",
-                       SQUID_LOG_TCP_REF_FAIL_HIT, "TCP_REF_FAIL_HIT",
+                       SQUID_LOG_TCP_REF_FAIL_HIT, "TCP_REFRESH_FAIL_HIT",
                        SQUID_LOG_TCP_REFRESH_MISS, "TCP_REFRESH_MISS",
-                       SQUID_LOG_TCP_CLIENT_REFRESH, "TCP_CLIENT_REFRESH",
+                       SQUID_LOG_TCP_CLIENT_REFRESH, "TCP_CLIENT_REFRESH_MISS",
                        SQUID_LOG_TCP_IMS_HIT, "TCP_IMS_HIT",
                        SQUID_LOG_TCP_IMS_MISS, "TCP_IMS_MISS",
-                       SQUID_LOG_TCP_SWAPFAIL, "TCP_SWAPFAIL",
+                       SQUID_LOG_TCP_SWAPFAIL, "TCP_SWAPFAIL_MISS",
                        SQUID_LOG_TCP_DENIED, "TCP_DENIED",
                        SQUID_LOG_TCP_WEBFETCH_MISS, "TCP_WEBFETCH_MISS",
                        SQUID_LOG_TCP_SPIDER_BYPASS, "TCP_SPIDER_BYPASS",
